@@ -28,6 +28,14 @@ protected:
 	btScalar m_acceptableUpperLimitSolution;
 
 	btAlignedObjectArray<char>	m_tempBuffer;
+
+	btAlignedObjectArray<btScalar> m_A;
+	btAlignedObjectArray<btScalar> m_b;
+	btAlignedObjectArray<btScalar> m_x;
+	btAlignedObjectArray<btScalar> m_lo;
+	btAlignedObjectArray<btScalar> m_hi;
+	btAlignedObjectArray<int>	m_dependencies;
+
 public:
 
 	btDantzigSolver()
@@ -41,47 +49,46 @@ public:
 		int n = b.rows();
 		if (n)
 		{
-			btScalar* AA = (btScalar*) A.getBufferPointer();
-			btScalar* bb = (btScalar* ) b.getBufferPointer();
-			btScalar* xx = (btScalar*) x.getBufferPointer();
-			btScalar* llo = (btScalar*) lo.getBufferPointer();
-			btScalar* hhi = (btScalar*) hi.getBufferPointer();
-			int* findex = (int*) &limitDependency[0];
 			int nub = 0;
 			btAlignedObjectArray<btScalar> ww;
 			ww.resize(n);
-		
-
+	
 
 			const btScalar* Aptr = A.getBufferPointer();
-
+			m_A.resize(n*n);
 			for (int i=0;i<n*n;i++)
 			{
-				AA[i] = Aptr[i];
+				m_A[i] = Aptr[i];
+
 			}
+
+			m_b.resize(n);
+			m_x.resize(n);
+			m_lo.resize(n);
+			m_hi.resize(n);
+			m_dependencies.resize(n);
 			for (int i=0;i<n;i++)
 			{
-				llo[i] = lo[i];
-				hhi[i] = hi[i];
-				bb[i] = b[i];
-				xx[i] = x[i];
+				m_lo[i] = lo[i];
+				m_hi[i] = hi[i];
+				m_b[i] = b[i];
+				m_x[i] = x[i];
+				m_dependencies[i] = limitDependency[i];
 			}
 
 			extern int numAllocas;
 			numAllocas = 0;
 
-			result = btSolveDantzigLCP (n,AA,xx,bb,&ww[0],nub,llo,hhi,findex);
-			
+			result = btSolveDantzigLCP (n,&m_A[0],&m_x[0],&m_b[0],&ww[0],nub,&m_lo[0],&m_hi[0],&m_dependencies[0]);
+			if (!result)
+				return result;
+
 //			printf("numAllocas = %d\n",numAllocas);
 			for (int i=0;i<n;i++)
 			{
-				x[i] = xx[i];
-
-				//test for NAN
-				if (x[i] != xx[i])
-				{
+				volatile btScalar xx = m_x[i];
+				if (xx != m_x[i])
 					return false;
-				}
 				if (x[i] >= m_acceptableUpperLimitSolution)
 				{
 					return false;
@@ -91,7 +98,11 @@ public:
 				{
 					return false;
 				}
-				
+			}
+
+			for (int i=0;i<n;i++)
+			{
+				x[i] = m_x[i];
 			}
 			
 		}
